Add release and architecture to shell workflow

--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -23,6 +23,8 @@ jobs:
           "8000": "80"
         envs: 'TestingDomain TEST_PREFERRED_CHAIN TEST_ACME_Server INPUT_*'
         sync: sshfs
+        release: "10.0"
+        arch: "aarch64"
         prepare: |
           pkg_add curl
         run: |
