--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -22,8 +22,8 @@ jobs:
         nat: |
           "8000": "80"
         envs: 'TestingDomain TEST_PREFERRED_CHAIN TEST_ACME_Server INPUT_*'
-        sync: sshfs
-        release: "10.0"
+        sync: no
+        release: "9.3"
         arch: "aarch64"
         prepare: |
           pkg_add curl
