--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -22,7 +22,7 @@ jobs:
         nat: |
           "8000": "80"
         envs: 'TestingDomain TEST_PREFERRED_CHAIN TEST_ACME_Server INPUT_*'
-        sync: no
+        #sync: no
         release: "10.1"
         prepare: |
           pkg_add curl
